# algorithms

./: .travis.yml  CMakeLists.txt  README.md  azure-pipelines.yml  dev.env  install-dependency.sh  prepare_dev_env.py  run-all.sh  run-test.py
coin_or/: coin_install.sh
cpp-algo/: CMakeLists.txt  run-test.py
cpp-algo/src/: DAG_redundancy_test.cpp  RandomData.cpp  RandomData.h  alien_dict_test.cpp  balance_array_test.cpp  cpp_algo_gtest_main.cpp  half_same_num_test.cpp  largest_k_num.cpp  make_heap.h  make_heap_test.cpp  max_freq_test.cpp  sort_test.cpp  txt_num_compare_test.cpp
cpp-algo/src/utility/: CppConsoleTable.hpp  RandomData.cpp  RandomData.h
deployment/: build.sh  columen_generation.cpp  dev.env  download_software.sh  install-dependecy.sh
env_prepare/: prepare_env.sh
env_prepare/ortools/: install_py_ortools.sh
glpk/: README.md  cg_table.cpp  set_partation.cpp  table_happy_partaton.cpp  x.py
machine-learning/recommend/: test.py  testdata.py  usercf.py
ortools/src/: build.sh
script/: prepare_env_ubuntu.sh
